# representations4d

./: README.md  pyproject.toml
colabs/: moog_inference_demo.ipynb  rvm_evaluation_demo.ipynb  rvm_inference_demo.ipynb  rvm_runtime_and_memory.ipynb  scaling4d_depth_demo.ipynb
models/: model.py  readout.py
moog/: README.md  attention.py  conv.py  initializers.py  modules.py  pos_embeddings.py
moog/configs/: movi.py
representations4d/models/: model.py  readout.py
utils/: checkpoint_utils.py
